--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estúdio de Catálogo de Roupas com IA</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      @import url('https://rsms.me/inter/inter.css');
       body {
         font-family: 'Inter', sans-serif;
       }
+      @import url('https://rsms.me/inter/inter.css');
     </style>
   <script type="importmap">
 {
